# python-project-lvl1

./: .gitignore  README.md  poetry.lock.backup  pyproject.toml  pyproject.toml.backup
.github/: dependabot.yml
.github/workflows/: pyci.yml
aabur_brain_games.egg-info/: PKG-INFO  SOURCES.txt
brain_games/: cli.py  engine.py  even.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  even.py
