[tool.poetry]
name = "AABur_brain_games"
version = "2.0.0"
description = "My first Python project _(Hexlet study)_"
authors = ["AABur <aabur@mail.ru>"]
license = "Apache License 2.0"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
rope = "^0.17.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

