[tool.poetry]
name = "AABur_brain_games"
version = "2.1.0"
description = "My first Python project _(Hexlet study)_"
authors = ["AABur <aabur@mail.ru>"]
license = "Apache License 2.0"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
bandit = "^1.6.2"
pylama = "^7.7.1"
mypy = "^0.782"

[tool.flakehell]
# optionally inherit from remote config (or local if you want)
base = "https://github.com/wemake-services/wemake-python-styleguide/blob/master/styles/flakehell.toml"
baseline = ".flakehell_baseline"

[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
